# ArcaneAuditor

./: .dockerignore  .gitignore  ArcaneAuditor.spec  ArcaneAuditorCLI.spec  ArcaneAuditorDesktop.spec  ArcaneAuditorWeb.spec  CHANGELOG.md  CLAUDE.md  CONFIGURATION_DESIGN.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RULE_BREAKDOWN.md  RULE_IDEAS.md  UNIFIED_RULE_ARCHITECTURE.md  WEB_README.md  WEB_SERVICE_SCRIPTS.md  __version__.py  analysis_results.xlsx  arcane_auditor_desktop.py  arcane_paths.py  capitaltest.xlsx  debug_rule_execution.py  debug_visit_pmd.py  docker-compose.yaml  entitlements.plist  example.env  example_config.json  example_config_with_rules.json  explain.py  json  main.py  myfile.xlsx  performance_analyzer.py  pyproject.toml  requirements.txt  setup_web_interface.py  start-web-service-advanced.bat  start-web-service-advanced.sh  (+9 more)
.github/: funding.yml
agents/: .foundry.json  ARCHITECTURE.md  CLAUDE.md  IMPL_PLAN.md  README.md  pyproject.toml
agents/.buildloop/: current-plan.md  review-report.md
agents/docs/: PLAN_agent-system.md
agents/fix_templates/: __init__.py  base.py  script_fixes.py  structure_fixes.py
agents/src/: __init__.py  __main__.py  cli.py  config.py  fixer.py  models.py  reporter.py  runner.py  scanner.py
agents/tests/: test_cli.py  test_config.py  test_fix_command.py  test_fixer.py  test_models.py  test_reporter.py  test_runner.py  test_scanner.py  test_script_fixes.py  test_structure_fixes.py  test_watch_command.py
agents/tests/fixtures/: test-config.json
agents/tests/fixtures/clean_app/: minimalPage.pmd  minimalPod.pod  utils.script
agents/tests/fixtures/dirty_app/: dirtyPage.pmd  dirtyPod.pod  helpers.script
agents/tests/fixtures/expected/: clean_app.json  dirty_app.json
arcane-learning-game/: QUICK_START.md  README.md  index.html
config/: README.md
configs/: README.md  comprehensive.json  default.json  minimal.json
docs/: CONFIGURATION.md  CUSTOM_RULES.md  RULES.md  RULE_BREAKDOWN.md  WEB_README.md  project-structure.md
file_processing/: __init__.py  config.py  context_tracker.py  models.py  processor.py
game/: index.html
hooks/: runtime-hook-macos-paths.py
llm_integration/: prompts.py
local_configs/: .gitignore  README.md
output/: __init__.py  formatter.py
parser/: app_parser.py  config.py  config_manager.py  models.py  pmd_preprocessor.py  pmd_script_grammar.lark  pmd_script_parser.py  rules_engine.py
(+319 files in other folders)
