[project]
name = "arcane-auditor"
version = "0.4.0-beta.1"
description = "A mystical code review tool for Workday Extend applications - part of Developers and Dragons"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "lark>=1.2.2",
    "openpyxl>=3.1.5",
    "psutil>=7.1.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "typer[all]>=0.16.1",
    "uvicorn[standard]>=0.35.0",
]
