[project]
name = "arcane-auditor"
version = "1.4.0"
description = "A mystical code review tool for Workday Extend applications - part of Developers and Dragons"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.42.0",
    "fastapi>=0.116.1",
    "lark>=1.2.2",
    "openpyxl>=3.1.5",
    "packaging>=24.0",
    "psutil>=7.1.0",
    "python-multipart>=0.0.20",
    "pywebview>=6.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "typer[all]>=0.16.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
